--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "media-revolution",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.16",
     "typescript": "^4.7.4"
@@ -19,6 +20,7 @@
     "axios": "^0.27.2",
     "class-transformer": "0.5.1",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6"
