--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "model:create": "ts-node ./node_modules/typeorm/cli.js entity:create -n",
+    "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run"
   },
   "keywords": [],
   "author": "media-revolution",
@@ -14,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
